--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,6 @@
         <module>contri/streamingpro-dl4j</module>
         <module>contri/streamingpro-automl</module>
         <module>contri/streamingpro-opencv</module>
-        <module>streamingpro-oss-dependency</module>
     </modules>
 
     <properties>
@@ -125,26 +124,32 @@
                             <artifactId>jetty-util</artifactId>
                         </exclusion>
                     </exclusions>
+                    <scope>${scope}</scope>
+
                 </dependency>
                 <dependency>
                     <groupId>org.eclipse.jetty</groupId>
                     <artifactId>jetty-server</artifactId>
                     <version>9.2.16.v20160414</version>
+                    <scope>${scope}</scope>
                 </dependency>
                 <dependency>
                     <groupId>org.eclipse.jetty</groupId>
                     <artifactId>jetty-io</artifactId>
                     <version>9.2.16.v20160414</version>
+                    <scope>${scope}</scope>
                 </dependency>
                 <dependency>
                     <groupId>org.eclipse.jetty</groupId>
                     <artifactId>jetty-util</artifactId>
                     <version>9.2.16.v20160414</version>
+                    <scope>${scope}</scope>
                 </dependency>
                 <dependency>
                     <groupId>org.eclipse.jetty</groupId>
                     <artifactId>jetty-http</artifactId>
                     <version>9.2.16.v20160414</version>
+                    <scope>${scope}</scope>
                 </dependency>
                 <dependency>
                     <groupId>org.apache.hadoop</groupId>
