--- a/streamingpro-cluster/pom.xml
+++ b/streamingpro-cluster/pom.xml
@@ -139,6 +139,12 @@
             <artifactId>serviceframework-orm_2.11</artifactId>
             <version>${serviceframework.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.json4s</groupId>
+            <artifactId>json4s-jackson_2.11</artifactId>
+            <version>3.6.1</version>
+        </dependency>
     </dependencies>
 
     <build>
