--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>tech.mlsql</groupId>
     <artifactId>streamingpro</artifactId>
     <packaging>pom</packaging>
-    <version>1.3.0-SNAPSHOT</version>
+    <version>1.2.1</version>
 
     <name>StreamingPro Parent POM</name>
     <url>https://github.com/allwefantasy/streamingpro</url>
