--- a/dev/docker/log4j.properties
+++ b/dev/docker/log4j.properties
@@ -22,9 +22,9 @@ log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern=%d{yy/MM/dd HH:mm:ss} %p %c{1}: %m%n
 
 log4j.appender.file=org.apache.log4j.rolling.RollingFileAppender
-log4j.appender.file.File=/tmp/__mlsql__/logs/mlsql_engine.log
+log4j.appender.file.File=${REALTIME_LOG_HOME}/mlsql_engine.log
 log4j.appender.file.rollingPolicy=org.apache.log4j.rolling.TimeBasedRollingPolicy
-log4j.appender.file.rollingPolicy.fileNamePattern=/tmp/__mlsql__/logs/mlsql_engine.%d.gz
+log4j.appender.file.rollingPolicy.fileNamePattern=${REALTIME_LOG_HOME}/mlsql_engine.%d.gz
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d{yy/MM/dd HH:mm:ss} %p %c{1}: %m%n
 log4j.appender.file.MaxBackupIndex=5
