--- a/pom.xml
+++ b/pom.xml
@@ -829,15 +829,24 @@
     </dependencies>
 
     <build>
-
         <sourceDirectory>src/main/java/</sourceDirectory>
         <resources>
             <resource>
                 <directory>src/main/resources-${mode}</directory>
+                <excludes>
+                    <exclude>mlsql-version-info.properties</exclude>
+                </excludes>
+                <filtering>false</filtering>
+            </resource>
+            <resource>
+                <directory>src/main/resources-${mode}</directory>
+                <includes>
+                    <include>mlsql-version-info.properties</include>
+                </includes>
+                <filtering>true</filtering>
             </resource>
         </resources>
         <plugins>
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
