--- a/streamingpro-mlsql/pom.xml
+++ b/streamingpro-mlsql/pom.xml
@@ -371,9 +371,9 @@
                     <version>${project.parent.version}</version>
                 </dependency>
                 <dependency>
-                        <groupId>com.intel.analytics.bigdl</groupId>
-                        <artifactId>bigdl-SPARK_2.4</artifactId>
-                        <version>0.8.0</version>
+                    <groupId>com.intel.analytics.bigdl</groupId>
+                    <artifactId>bigdl-SPARK_2.4</artifactId>
+                    <version>0.8.0</version>
                     <exclusions>
                         <exclusion>
                             <groupId>com.google.guava</groupId>
@@ -688,5 +688,32 @@
         </dependency>
 
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.hadoop</groupId>
+                <artifactId>hadoop-maven-plugins</artifactId>
+                <executions>
+                    <execution>
+                        <id>version-info</id>
+                        <phase>generate-resources</phase>
+                        <goals>
+                            <goal>version-info</goal>
+                        </goals>
+                        <configuration>
+                            <source>
+                                <directory>${basedir}/src/main</directory>
+                                <includes>
+                                    <include>java/**/*.java</include>
+                                    <include>java/**/*.scala</include>
+                                </includes>
+                            </source>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
