--- a/streamingpro-spark-2.4.0-adaptor/pom.xml
+++ b/streamingpro-spark-2.4.0-adaptor/pom.xml
@@ -75,5 +75,10 @@
             <artifactId>mysql-binlog-connector-java</artifactId>
             <version>0.18.1</version>
         </dependency>
+        <dependency>
+            <groupId>tech.mlsql</groupId>
+            <artifactId>spark-binlog_${scala.binary.version}</artifactId>
+            <version>0.1.0</version>
+        </dependency>
     </dependencies>
 </project>
