--- a/streamingpro-mlsql/pom.xml
+++ b/streamingpro-mlsql/pom.xml
@@ -487,6 +487,12 @@
 
         <dependency>
             <groupId>tech.mlsql</groupId>
+            <artifactId>simple-schema_${scala.binary.version}</artifactId>
+            <version>0.1.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>tech.mlsql</groupId>
             <artifactId>streamingpro-spark-common</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
