--- a/streamingpro-spark-2.4.0-adaptor/pom.xml
+++ b/streamingpro-spark-2.4.0-adaptor/pom.xml
@@ -24,6 +24,11 @@
             <version>${project.parent.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>tech.mlsql</groupId>
+            <artifactId>mlsql-ps-service_2.4.3_${scala.binary.version}</artifactId>
+            <version>1.3.0</version>
+        </dependency>
 
         <dependency>
             <groupId>org.apache.spark</groupId>
