--- a/streamingpro-mlsql/pom.xml
+++ b/streamingpro-mlsql/pom.xml
@@ -223,11 +223,11 @@
                         </exclusion>
                     </exclusions>
                 </dependency>
-                
+
                 <dependency>
                     <groupId>tech.mlsql</groupId>
-                    <artifactId>streamingpro-redis</artifactId>
-                    <version>${project.parent.version}</version>
+                    <artifactId>mlsql-redis-${spark.bigversion}_${scala.binary.version}</artifactId>
+                    <version>0.1.0</version>
                 </dependency>
                 <dependency>
                     <groupId>org.apache.hive</groupId>
@@ -672,7 +672,7 @@
             <artifactId>druid</artifactId>
             <version>1.1.16</version>
         </dependency>
-        
+
 
     </dependencies>
 
