--- a/streamingpro-spark-2.4.0-adaptor/pom.xml
+++ b/streamingpro-spark-2.4.0-adaptor/pom.xml
@@ -9,18 +9,18 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>streamingpro-spark-2.4.0-adaptor</artifactId>
+    <artifactId>streamingpro-spark-2.4.0-adaptor_${scala.binary.version}</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>tech.mlsql</groupId>
-            <artifactId>streamingpro-spark-common</artifactId>
+            <artifactId>streamingpro-spark-common-2.4_${scala.binary.version}</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
 
         <dependency>
             <groupId>tech.mlsql</groupId>
-            <artifactId>streamingpro-common</artifactId>
+            <artifactId>streamingpro-common-2.4_${scala.binary.version}</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
 
