--- a/streamingpro-api/pom.xml
+++ b/streamingpro-api/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>streamingpro-api</artifactId>
+    <artifactId>streamingpro-api-${spark.bigversion}_${scala.binary.version}</artifactId>
     <dependencies>
         <dependency>
             <groupId>org.apache.spark</groupId>
