--- a/streamingpro-commons/pom.xml
+++ b/streamingpro-commons/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>streamingpro-common</artifactId>
+    <artifactId>streamingpro-common-${spark.bigversion}_${scala.binary.version}</artifactId>
     <dependencies>
         <dependency>
             <groupId>org.apache.hadoop</groupId>
