--- a/streamingpro-mlsql/pom.xml
+++ b/streamingpro-mlsql/pom.xml
@@ -158,29 +158,6 @@
             </dependencies>
         </profile>
 
-
-        <profile>
-            <id>crawler</id>
-            <dependencies>
-                <dependency>
-                    <groupId>tech.mlsql</groupId>
-                    <artifactId>streamingpro-crawler</artifactId>
-                    <version>${project.parent.version}</version>
-                </dependency>
-            </dependencies>
-        </profile>
-
-        <profile>
-            <id>xgboost</id>
-            <dependencies>
-                <dependency>
-                    <groupId>tech.mlsql</groupId>
-                    <artifactId>streamingpro-xgboost</artifactId>
-                    <version>${project.parent.version}</version>
-                </dependency>
-            </dependencies>
-        </profile>
-
         <profile>
             <id>unit-test</id>
 
@@ -316,7 +293,7 @@
             <dependencies>
                 <dependency>
                     <groupId>tech.mlsql</groupId>
-                    <artifactId>streamingpro-spark-2.3.0-adaptor</artifactId>
+                    <artifactId>streamingpro-spark-2.3.0-adaptor_${scala.binary.version}</artifactId>
                     <version>${project.parent.version}</version>
                 </dependency>
                 <dependency>
@@ -347,7 +324,7 @@
             <dependencies>
                 <dependency>
                     <groupId>tech.mlsql</groupId>
-                    <artifactId>streamingpro-spark-2.4.0-adaptor</artifactId>
+                    <artifactId>streamingpro-spark-2.4.0-adaptor_${scala.binary.version}</artifactId>
                     <version>${project.parent.version}</version>
                 </dependency>
                 <dependency>
@@ -370,28 +347,6 @@
                 <!--<artifactId>analytics-zoo-bigdl_0.6.0-spark_2.3.1</artifactId>-->
                 <!--<version>0.3.0</version>-->
                 <!--</dependency>-->
-            </dependencies>
-        </profile>
-
-        <profile>
-            <id>dl4j</id>
-            <dependencies>
-                <dependency>
-                    <groupId>tech.mlsql</groupId>
-                    <artifactId>streamingpro-dl4j</artifactId>
-                    <version>${project.parent.version}</version>
-                </dependency>
-            </dependencies>
-        </profile>
-
-        <profile>
-            <id>opencv-support</id>
-            <dependencies>
-                <dependency>
-                    <groupId>tech.mlsql</groupId>
-                    <artifactId>streamingpro-opencv</artifactId>
-                    <version>${project.parent.version}</version>
-                </dependency>
             </dependencies>
         </profile>
 
@@ -421,7 +376,7 @@
             <dependencies>
                 <dependency>
                     <groupId>tech.mlsql</groupId>
-                    <artifactId>streamingpro-spark-common</artifactId>
+                    <artifactId>streamingpro-spark-common-${spark.bigversion}_${scala.binary.version}</artifactId>
                     <version>${project.parent.version}</version>
                     <exclusions>
                         <exclusion>
@@ -451,7 +406,7 @@
                 <!--</dependency>-->
                 <dependency>
                     <groupId>tech.mlsql</groupId>
-                    <artifactId>streamingpro-spark-common</artifactId>
+                    <artifactId>streamingpro-spark-common-${spark.bigversion}_${scala.binary.version}</artifactId>
                     <version>${project.parent.version}</version>
                 </dependency>
             </dependencies>
@@ -460,8 +415,43 @@
     <dependencies>
 
         <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.11.2</version>
+        </dependency>
+        <dependency>
+            <groupId>us.codecraft</groupId>
+            <artifactId>xsoup</artifactId>
+            <version>0.3.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>cn.edu.hfut.dmic.webcollector</groupId>
+            <artifactId>WebCollector</artifactId>
+            <version>2.71</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>junit</groupId>
+                    <artifactId>junit</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.springframework</groupId>
+                    <artifactId>spring-jdbc</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.mchange</groupId>
+                    <artifactId>c3p0</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.apache.avro</groupId>
+                    <artifactId>avro</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <dependency>
             <groupId>tech.mlsql</groupId>
-            <artifactId>streamingpro-dsl</artifactId>
+            <artifactId>streamingpro-dsl-${spark.bigversion}_${scala.binary.version}</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
 
@@ -473,13 +463,13 @@
 
         <dependency>
             <groupId>tech.mlsql</groupId>
-            <artifactId>streamingpro-spark-common</artifactId>
+            <artifactId>streamingpro-spark-common-${spark.bigversion}_${scala.binary.version}</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
 
         <dependency>
             <groupId>tech.mlsql</groupId>
-            <artifactId>streamingpro-api</artifactId>
+            <artifactId>streamingpro-api-${spark.bigversion}_${scala.binary.version}</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
 
