--- a/streamingpro-spark-common/pom.xml
+++ b/streamingpro-spark-common/pom.xml
@@ -8,7 +8,7 @@
         <version>1.4.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>streamingpro-spark-common</artifactId>
+    <artifactId>streamingpro-spark-common-${spark.bigversion}_${scala.binary.version}</artifactId>
     <dependencies>
         <dependency>
             <groupId>org.apache.spark</groupId>
