--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,8 @@
         <hadoop-client-version>2.6.5</hadoop-client-version>
 
         <common-utils-version>0.1.6</common-utils-version>
+        <mlsql-ps-service-version>1.3.5</mlsql-ps-service-version>
+        <pyjava-version>0.1.0</pyjava-version>
     </properties>
 
     <repositories>
