--- a/streamingpro-spark-2.3.0-adaptor/pom.xml
+++ b/streamingpro-spark-2.3.0-adaptor/pom.xml
@@ -26,7 +26,7 @@
         <dependency>
             <groupId>tech.mlsql</groupId>
             <artifactId>mlsql-ps-service_2.3.2_${scala.binary.version}</artifactId>
-            <version>1.3.5</version>
+            <version>${mlsql-ps-service-version}</version>
         </dependency>
 
         <dependency>
