--- a/streamingpro-spark-2.4.0-adaptor/pom.xml
+++ b/streamingpro-spark-2.4.0-adaptor/pom.xml
@@ -27,7 +27,7 @@
         <dependency>
             <groupId>tech.mlsql</groupId>
             <artifactId>mlsql-ps-service_2.4.3_${scala.binary.version}</artifactId>
-            <version>1.3.5</version>
+            <version>${mlsql-ps-service-version}</version>
         </dependency>
 
         <dependency>
