--- a/streamingpro-mlsql/pom.xml
+++ b/streamingpro-mlsql/pom.xml
@@ -428,7 +428,7 @@
         <dependency>
             <groupId>tech.mlsql</groupId>
             <artifactId>mlsql-scheduler</artifactId>
-            <version>0.1.0-SNAPSHOT</version>
+            <version>${mlsql-scheduler-version}</version>
             <exclusions>
                 <exclusion>
                     <groupId>tech.mlsql</groupId>
