--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,7 @@
         <pyjava-version>0.2.0</pyjava-version>
         <delta-plus-version>0.1.2</delta-plus-version>
         <spark-binlog-version>0.1.7</spark-binlog-version>
+        <mlsql-scheduler-version>0.1.0</mlsql-scheduler-version>
     </properties>
 
     <repositories>
