--- a/streamingpro-mlsql/src/main/resources-local/log4j.properties
+++ b/streamingpro-mlsql/src/main/resources-local/log4j.properties
@@ -38,6 +38,8 @@ log4j.logger.org.spark_project.jetty.util.component.AbstractLifeCycle=ERROR
 log4j.logger.org.apache.spark.repl.SparkIMain$exprTyper=INFO
 log4j.logger.org.apache.spark.repl.SparkILoop$SparkILoopInterpreter=INFO
 log4j.logger.org.apache.parquet=ERROR
+log4j.logger.org.apache.spark.ContextCleaner=ERROR
+log4j.logger.org.apache.spark.sql.catalyst.expressions.codegen.CodeGenerator=ERROR
 log4j.logger.parquet=ERROR
 # SPARK-9183: Settings to avoid annoying messages when looking up nonexistent UDFs in SparkSQL with Hive support
 log4j.logger.org.apache.hadoop.hive.metastore.RetryingHMSHandler=FATAL
