upgrade commont-utils to 0.2.1 &&  upgrade mysql-binlog to 1.0.0-SNAPSHOT

--- a/streamingpro-spark-2.4.0-adaptor/pom.xml
+++ b/streamingpro-spark-2.4.0-adaptor/pom.xml
@@ -78,8 +78,8 @@
 
         <dependency>
             <groupId>tech.mlsql</groupId>
-            <artifactId>spark-binlog_${scala.binary.version}</artifactId>
-            <version>${spark-binlog-version}</version>
+            <artifactId>mysql-binlog_${scala.binary.version}</artifactId>
+            <version>${mysql-binlog-version}</version>
             <exclusions>
                 <exclusion>
                     <groupId>tech.mlsql</groupId>
