--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,7 @@
         <mlsql-ps-service-version>1.3.5</mlsql-ps-service-version>
         <pyjava-version>0.2.6</pyjava-version>
         <delta-plus-version>0.2.0</delta-plus-version>
-        <mysql-binlog-version>1.0.0-SNAPSHOT</mysql-binlog-version>
+        <mysql-binlog-version>1.0.0</mysql-binlog-version>
         <mlsql-scheduler-version>0.1.0</mlsql-scheduler-version>
     </properties>
 
