[HOTFIX] use correct project version

--- a/external/python-controller/pom.xml
+++ b/external/python-controller/pom.xml
@@ -16,7 +16,7 @@
         <dependency>
             <groupId>tech.mlsql</groupId>
             <artifactId>streamingpro-mlsql-spark_${spark.bigversion}_${scala.binary.version}</artifactId>
-            <version>1.5.0</version>
+            <version>${project.version}</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
