--- a/external/python-controller/pom.xml
+++ b/external/python-controller/pom.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>streamingpro</artifactId>
+        <artifactId>streamingpro_2.11</artifactId>
         <groupId>tech.mlsql</groupId>
         <version>1.6.0-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
@@ -17,7 +17,7 @@
             <groupId>tech.mlsql</groupId>
             <artifactId>streamingpro-mlsql-spark_${spark.bigversion}_${scala.binary.version}</artifactId>
             <version>${project.version}</version>
-            <scope>provided</scope>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
