--- a/external/python-controller/pom.xml
+++ b/external/python-controller/pom.xml
@@ -31,6 +31,14 @@
             <version>${spark.version}</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-mllib_${scala.binary.version}</artifactId>
+            <version>${spark.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-catalyst_${scala.binary.version}</artifactId>
@@ -64,6 +72,7 @@
             <version>${spark.version}</version>
             <scope>provided</scope>
         </dependency>
+        
     </dependencies>
     
 
