--- a/pom.xml
+++ b/pom.xml
@@ -345,6 +345,7 @@
                 <module>streamingpro-spark-2.3.0-adaptor</module>
                 <module>streamingpro-dsl</module>
                 <module>streamingpro-mlsql</module>
+                <module>external/python-controller</module>
             </modules>
             <dependencies>
                 <dependency>
