--- a/pom.xml
+++ b/pom.xml
@@ -65,8 +65,8 @@
         <scope>provided</scope>
         <hadoop-client-version>2.6.5</hadoop-client-version>
 
-        <common-utils-version>0.2.5</common-utils-version>
-        <serviceframework.version>2.0.3</serviceframework.version>
+        <common-utils-version>0.2.6</common-utils-version>
+        <serviceframework.version>2.0.4</serviceframework.version>
         <pyjava-version>0.2.8.0</pyjava-version>
 
         <delta-plus-version>0.2.0</delta-plus-version>
@@ -415,6 +415,7 @@
                 <module>streamingpro-dsl</module>
                 <module>streamingpro-mlsql</module>
                 <module>external/python-controller</module>
+                <module>external/mlsql-watcher</module>
             </modules>
             <dependencies>
                 <dependency>
