--- a/pom.xml
+++ b/pom.xml
@@ -416,6 +416,7 @@
                 <module>streamingpro-mlsql</module>
                 <module>external/python-controller</module>
                 <module>external/mlsql-watcher</module>
+                <module>external/mlsql-mysql-store</module>
             </modules>
             <dependencies>
                 <dependency>
