--- a/streamingpro-mlsql/pom.xml
+++ b/streamingpro-mlsql/pom.xml
@@ -276,6 +276,18 @@
 
                 <dependency>
                     <groupId>tech.mlsql</groupId>
+                    <artifactId>python-controller-${spark.bigversion}_${scala.binary.version}</artifactId>
+                    <version>${project.parent.version}</version>
+                </dependency>
+
+                <dependency>
+                    <groupId>tech.mlsql</groupId>
+                    <artifactId>mlsql-mysql-store-${spark.bigversion}_${scala.binary.version}</artifactId>
+                    <version>${project.parent.version}</version>
+                </dependency>
+
+                <dependency>
+                    <groupId>tech.mlsql</groupId>
                     <artifactId>mlsql-watcher-${spark.bigversion}_${scala.binary.version}</artifactId>
                     <version>${project.parent.version}</version>
                 </dependency>
@@ -397,12 +409,6 @@
         </profile>
     </profiles>
     <dependencies>
-
-        <dependency>
-            <groupId>tech.mlsql</groupId>
-            <artifactId>python-controller-${spark.bigversion}_${scala.binary.version}</artifactId>
-            <version>${project.parent.version}</version>
-        </dependency>
 
         <dependency>
             <groupId>tech.mlsql</groupId>
