--- a/pom.xml
+++ b/pom.xml
@@ -65,12 +65,12 @@
         <scope>provided</scope>
         <hadoop-client-version>2.6.5</hadoop-client-version>
 
-        <common-utils-version>0.2.6</common-utils-version>
+        <common-utils-version>0.2.7</common-utils-version>
         <serviceframework.version>2.0.4</serviceframework.version>
         <pyjava-version>0.2.8.0</pyjava-version>
 
         <delta-plus-version>0.2.0</delta-plus-version>
-        <mysql-binlog-version>1.0.0-SNAPSHOT</mysql-binlog-version>
+        <mysql-binlog-version>1.0.1</mysql-binlog-version>
         <mlsql-scheduler-version>0.1.0</mlsql-scheduler-version>
     </properties>
 
